Modulo de Flight instanciado en eureka

--- a/Flight/src/main/resources/application.properties
+++ b/Flight/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Flight
-server.port=8081
+server.port=0
 
 spring.docker.compose.file=C:\\Users\\Andre\\Downloads\\MICRO\\avianka\\Flight\\compose.yaml
 spring.jpa.hibernate.ddl-auto=create
@@ -9,3 +9,5 @@ spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:mysql://localhost:3307/dbFlights
 spring.datasource.username=root
 spring.datasource.password=avianka
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
