--- a/Booking/src/main/resources/application.properties
+++ b/Booking/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Booking
-server.port=8082
+server.port=0
 
 spring.docker.compose.file=C:\\Users\\Andre\\Downloads\\MICRO\\avianka\\Booking\\compose.yaml
 spring.jpa.hibernate.ddl-auto=create
@@ -9,3 +9,5 @@ spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:mysql://localhost:3307/dbBooking
 spring.datasource.username=root
 spring.datasource.password=avianka
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
