--- a/Booking/src/main/resources/application.properties
+++ b/Booking/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.url=jdbc:mysql://localhost:3307/dbBooking
 spring.datasource.username=root
 spring.datasource.password=avianka
 
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.instance.instance-id=${spring.application.name}
