--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=gateway
+server.port=8083
+
+spring.application.name=api-gateway
+
+spring.cloud.gateway.routes[0].id=Flight
+spring.cloud.gateway.routes[0].uri=lb://Flight
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/flights/**
+
+spring.cloud.gateway.routes[1].id=Booking
+spring.cloud.gateway.routes[1].uri=lb://Booking
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/bookings/**
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
